--- a/Twitter/TweetTableViewCell.xib
+++ b/Twitter/TweetTableViewCell.xib
@@ -2,29 +2,75 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="TweetCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="43" id="KGk-i7-Jjw" customClass="TweetTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="TweetCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="67" id="KGk-i7-Jjw" customClass="TweetTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="319" height="68"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="319" height="67.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tweet 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="58f-lq-uAL">
-                        <rect key="frame" x="31" y="14" width="253" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WLw-p0-Hvh">
+                        <rect key="frame" x="51" y="8" width="79" height="20.5"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ukY-DB-8dd">
+                        <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="48" id="EiG-XB-gGg"/>
+                            <constraint firstAttribute="height" constant="48" id="gtg-Cr-rtw"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" ambiguous="YES" misplaced="YES" text="@handle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAO-0q-yp6">
+                        <rect key="frame" x="138" y="8" width="102" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="31/31/2031" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OCJ-e4-O3e">
+                        <rect key="frame" x="248" y="7" width="63" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalCompressionResistancePriority="749" misplaced="YES" text="Tweet 1" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="58f-lq-uAL">
+                        <rect key="frame" x="51" y="36" width="260" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ukY-DB-8dd" secondAttribute="bottom" constant="5" id="47U-Df-lw7"/>
+                    <constraint firstItem="58f-lq-uAL" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="8YC-Zt-B1M"/>
+                    <constraint firstItem="xAO-0q-yp6" firstAttribute="leading" secondItem="WLw-p0-Hvh" secondAttribute="trailing" constant="8" id="8g0-0X-1lT"/>
+                    <constraint firstItem="58f-lq-uAL" firstAttribute="leading" secondItem="ukY-DB-8dd" secondAttribute="trailing" constant="3" id="CUR-BE-53W"/>
+                    <constraint firstItem="WLw-p0-Hvh" firstAttribute="leading" secondItem="ukY-DB-8dd" secondAttribute="trailing" constant="3" id="GCb-We-0U5"/>
+                    <constraint firstItem="58f-lq-uAL" firstAttribute="top" secondItem="xAO-0q-yp6" secondAttribute="bottom" constant="7.5" id="JQS-9X-exe"/>
+                    <constraint firstItem="ukY-DB-8dd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="SRH-mR-9pR"/>
+                    <constraint firstItem="OCJ-e4-O3e" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="VAa-Vr-BWu"/>
+                    <constraint firstItem="xAO-0q-yp6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="YHR-5D-mFp"/>
+                    <constraint firstItem="WLw-p0-Hvh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="cD9-p2-nrm"/>
+                    <constraint firstItem="OCJ-e4-O3e" firstAttribute="leading" secondItem="xAO-0q-yp6" secondAttribute="trailing" constant="4" id="eJc-ji-i5D"/>
+                    <constraint firstItem="ukY-DB-8dd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="enW-Jw-7wt"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="58f-lq-uAL" secondAttribute="bottom" constant="5" id="ltg-8d-qex"/>
+                    <constraint firstAttribute="trailing" secondItem="OCJ-e4-O3e" secondAttribute="trailing" constant="8" id="ojm-1G-gsv"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="TweetTextLabel" destination="58f-lq-uAL" id="oPc-qg-IcK"/>
+                <outlet property="dateTimeLabel" destination="OCJ-e4-O3e" id="1XI-Ar-3cz"/>
+                <outlet property="profileImageView" destination="ukY-DB-8dd" id="yVM-kJ-QS9"/>
+                <outlet property="userHandleLabel" destination="xAO-0q-yp6" id="2JS-S5-8S4"/>
+                <outlet property="userNameLabel" destination="WLw-p0-Hvh" id="3YK-1F-h6P"/>
             </connections>
-            <point key="canvasLocation" x="139" y="338"/>
+            <point key="canvasLocation" x="138.5" y="350"/>
         </tableViewCell>
     </objects>
 </document>
