--- a/Twitter/TweetTableViewCell.xib
+++ b/Twitter/TweetTableViewCell.xib
@@ -7,17 +7,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="TweetCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="67" id="KGk-i7-Jjw" customClass="TweetTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="319" height="68"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="TweetCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="107" id="KGk-i7-Jjw" customClass="TweetTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="319" height="108"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="319" height="67.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="319" height="107.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WLw-p0-Hvh">
                         <rect key="frame" x="51" y="8" width="79" height="20.5"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ukY-DB-8dd">
@@ -30,23 +30,33 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" ambiguous="YES" misplaced="YES" text="@handle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAO-0q-yp6">
                         <rect key="frame" x="138" y="8" width="102" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="31/31/2031" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OCJ-e4-O3e">
                         <rect key="frame" x="248" y="7" width="63" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalCompressionResistancePriority="749" misplaced="YES" text="Tweet 1" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="58f-lq-uAL">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalCompressionResistancePriority="749" ambiguous="YES" misplaced="YES" text="Tweet 1" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="58f-lq-uAL">
                         <rect key="frame" x="51" y="36" width="260" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Reply" translatesAutoresizingMaskIntoConstraints="NO" id="72M-W6-cKB">
+                        <rect key="frame" x="77" y="77" width="18" height="24"/>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Retweet" translatesAutoresizingMaskIntoConstraints="NO" id="9dJ-rd-ArS">
+                        <rect key="frame" x="138" y="77" width="25" height="24"/>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="defaultHeart" translatesAutoresizingMaskIntoConstraints="NO" id="8DF-Wb-SOI">
+                        <rect key="frame" x="207" y="77" width="22" height="26.5"/>
+                    </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="9dJ-rd-ArS" secondAttribute="bottom" constant="6.5" id="1wz-Zm-sEO"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ukY-DB-8dd" secondAttribute="bottom" constant="5" id="47U-Df-lw7"/>
                     <constraint firstItem="58f-lq-uAL" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="8YC-Zt-B1M"/>
                     <constraint firstItem="xAO-0q-yp6" firstAttribute="leading" secondItem="WLw-p0-Hvh" secondAttribute="trailing" constant="8" id="8g0-0X-1lT"/>
@@ -59,9 +69,20 @@
                     <constraint firstItem="WLw-p0-Hvh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="cD9-p2-nrm"/>
                     <constraint firstItem="OCJ-e4-O3e" firstAttribute="leading" secondItem="xAO-0q-yp6" secondAttribute="trailing" constant="4" id="eJc-ji-i5D"/>
                     <constraint firstItem="ukY-DB-8dd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="enW-Jw-7wt"/>
+                    <constraint firstItem="72M-W6-cKB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="77" id="fMa-pz-QFh"/>
+                    <constraint firstItem="8DF-Wb-SOI" firstAttribute="top" secondItem="58f-lq-uAL" secondAttribute="bottom" constant="20.5" id="foc-A0-j2c"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="58f-lq-uAL" secondAttribute="bottom" constant="5" id="ltg-8d-qex"/>
+                    <constraint firstItem="8DF-Wb-SOI" firstAttribute="leading" secondItem="9dJ-rd-ArS" secondAttribute="trailing" constant="44" id="ndm-gP-VT2"/>
                     <constraint firstAttribute="trailing" secondItem="OCJ-e4-O3e" secondAttribute="trailing" constant="8" id="ojm-1G-gsv"/>
+                    <constraint firstAttribute="bottom" secondItem="8DF-Wb-SOI" secondAttribute="bottom" constant="4" id="olL-3a-RJ5"/>
+                    <constraint firstItem="9dJ-rd-ArS" firstAttribute="leading" secondItem="72M-W6-cKB" secondAttribute="trailing" constant="43" id="v9X-4S-7Op"/>
+                    <constraint firstAttribute="bottom" secondItem="72M-W6-cKB" secondAttribute="bottom" constant="6.5" id="zLz-rx-Tbu"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="ltg-8d-qex"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="TweetTextLabel" destination="58f-lq-uAL" id="oPc-qg-IcK"/>
@@ -70,7 +91,12 @@
                 <outlet property="userHandleLabel" destination="xAO-0q-yp6" id="2JS-S5-8S4"/>
                 <outlet property="userNameLabel" destination="WLw-p0-Hvh" id="3YK-1F-h6P"/>
             </connections>
-            <point key="canvasLocation" x="138.5" y="350"/>
+            <point key="canvasLocation" x="138.5" y="370"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Reply" width="65" height="72"/>
+        <image name="Retweet" width="75" height="72"/>
+        <image name="defaultHeart" width="54" height="72"/>
+    </resources>
 </document>
