--- a/Twitter/IndividualTweetViewController.xib
+++ b/Twitter/IndividualTweetViewController.xib
@@ -8,9 +8,6 @@
             <connections>
                 <outlet property="replyTextField" destination="apK-qg-Dgd" id="7Ky-6n-vgp"/>
                 <outlet property="tweetContentLabel" destination="IaG-jf-McE" id="yCz-Q8-Ma0"/>
-                <outlet property="tweetHeartLabel" destination="2nY-FJ-ZUe" id="h9r-hR-EcZ"/>
-                <outlet property="tweetReplyLabel" destination="LWE-BI-okF" id="QqL-DR-gsS"/>
-                <outlet property="tweetRetweetLabel" destination="fna-eM-NoJ" id="Krr-fF-t8v"/>
                 <outlet property="tweeterHandelLabel" destination="1IV-7F-VL2" id="W6b-I6-eOT"/>
                 <outlet property="tweeterImageView" destination="kht-YJ-A2l" id="aS5-rc-XF6"/>
                 <outlet property="tweeterNameLabel" destination="Im9-a1-6bB" id="hby-MX-SOE"/>
@@ -49,56 +46,48 @@
                     <rect key="frame" x="9" y="148" width="302" height="1"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Reply" translatesAutoresizingMaskIntoConstraints="NO" id="LWE-BI-okF">
-                    <rect key="frame" x="31" y="157" width="16" height="16"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="16" id="111-FE-Dgq"/>
-                        <constraint firstAttribute="width" constant="16" id="2Rc-fp-f1p"/>
-                    </constraints>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Retweet" translatesAutoresizingMaskIntoConstraints="NO" id="fna-eM-NoJ">
-                    <rect key="frame" x="106" y="157" width="16" height="16"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="16" id="4VN-LN-bg0"/>
-                        <constraint firstAttribute="width" constant="16" id="SkC-ex-sRW"/>
-                    </constraints>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="defaultHeart" translatesAutoresizingMaskIntoConstraints="NO" id="2nY-FJ-ZUe">
-                    <rect key="frame" x="181" y="157" width="16" height="16"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="16" id="HJe-vQ-eOh"/>
-                        <constraint firstAttribute="height" constant="16" id="ZzV-mI-loA"/>
-                    </constraints>
-                </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Tweet Content" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IaG-jf-McE">
                     <rect key="frame" x="8" y="108" width="304" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="apK-qg-Dgd">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="745" ambiguous="YES" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="apK-qg-Dgd">
                     <rect key="frame" x="0.0" y="197" width="320" height="371"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
+                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tov-X8-LWy">
+                    <rect key="frame" x="53" y="157" width="56" height="30"/>
+                    <state key="normal" title="Retweet"/>
+                    <connections>
+                        <action selector="onRetweetButtonPush:" destination="-1" eventType="touchUpInside" id="hfk-5o-gG5"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aUx-Va-L3E">
+                    <rect key="frame" x="164" y="157" width="55" height="30"/>
+                    <state key="normal" title="Favorite"/>
+                    <connections>
+                        <action selector="onFavoriteButtonPush:" destination="-1" eventType="touchUpInside" id="u2y-Lf-JQM"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="apK-qg-Dgd" firstAttribute="top" secondItem="Tov-X8-LWy" secondAttribute="bottom" constant="10" id="0RJ-3Z-4ls"/>
+                <constraint firstItem="Tov-X8-LWy" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="53" id="2ly-st-ncX"/>
                 <constraint firstItem="IaG-jf-McE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="3SX-zK-BjJ"/>
+                <constraint firstItem="apK-qg-Dgd" firstAttribute="top" secondItem="aUx-Va-L3E" secondAttribute="bottom" constant="10" id="6pY-NR-pMP"/>
                 <constraint firstItem="1IV-7F-VL2" firstAttribute="leading" secondItem="kht-YJ-A2l" secondAttribute="trailing" constant="11" id="QFw-5N-sAc"/>
-                <constraint firstItem="fna-eM-NoJ" firstAttribute="leading" secondItem="LWE-BI-okF" secondAttribute="trailing" constant="59" id="QXT-6B-xFB"/>
-                <constraint firstItem="2nY-FJ-ZUe" firstAttribute="top" secondItem="gxm-zi-LC4" secondAttribute="bottom" constant="8" id="Qmd-oS-912"/>
-                <constraint firstItem="fna-eM-NoJ" firstAttribute="top" secondItem="gxm-zi-LC4" secondAttribute="bottom" constant="8" id="Qn6-Hc-2w8"/>
                 <constraint firstItem="kht-YJ-A2l" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="RPp-JY-91J"/>
-                <constraint firstItem="LWE-BI-okF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="31" id="Ui5-dF-qaH"/>
                 <constraint firstAttribute="trailing" secondItem="IaG-jf-McE" secondAttribute="trailing" constant="8" id="WwW-lv-faz"/>
-                <constraint firstItem="apK-qg-Dgd" firstAttribute="top" secondItem="2nY-FJ-ZUe" secondAttribute="bottom" constant="24" id="XMp-NK-4HJ"/>
-                <constraint firstItem="LWE-BI-okF" firstAttribute="top" secondItem="gxm-zi-LC4" secondAttribute="bottom" constant="8" id="YAE-eu-wfj"/>
                 <constraint firstItem="IaG-jf-McE" firstAttribute="top" secondItem="kht-YJ-A2l" secondAttribute="bottom" constant="8" id="aIe-Xg-aI3"/>
-                <constraint firstItem="2nY-FJ-ZUe" firstAttribute="leading" secondItem="fna-eM-NoJ" secondAttribute="trailing" constant="59" id="cIu-3x-hNX"/>
+                <constraint firstItem="aUx-Va-L3E" firstAttribute="leading" secondItem="Tov-X8-LWy" secondAttribute="trailing" constant="55" id="cPt-Jy-hbB"/>
                 <constraint firstItem="gxm-zi-LC4" firstAttribute="top" secondItem="IaG-jf-McE" secondAttribute="bottom" constant="8" id="cdx-Fd-x9T"/>
                 <constraint firstItem="kht-YJ-A2l" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="28" id="eUG-Ck-kzq"/>
+                <constraint firstItem="Tov-X8-LWy" firstAttribute="top" secondItem="gxm-zi-LC4" secondAttribute="bottom" constant="8" id="fUR-rf-in5"/>
                 <constraint firstItem="1IV-7F-VL2" firstAttribute="top" secondItem="Im9-a1-6bB" secondAttribute="bottom" constant="4" id="jjH-QS-mAL"/>
+                <constraint firstItem="aUx-Va-L3E" firstAttribute="top" secondItem="gxm-zi-LC4" secondAttribute="bottom" constant="8" id="oHP-H9-aFj"/>
                 <constraint firstAttribute="trailing" secondItem="apK-qg-Dgd" secondAttribute="trailing" id="rce-lG-VRr"/>
                 <constraint firstItem="apK-qg-Dgd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="t0X-cW-Zom"/>
                 <constraint firstAttribute="bottom" secondItem="apK-qg-Dgd" secondAttribute="bottom" id="wWj-Gf-rk1"/>
@@ -114,9 +103,4 @@
             <point key="canvasLocation" x="587" y="668"/>
         </textView>
     </objects>
-    <resources>
-        <image name="Reply" width="65" height="72"/>
-        <image name="Retweet" width="75" height="72"/>
-        <image name="defaultHeart" width="54" height="72"/>
-    </resources>
 </document>
